@@ -1,0 +1,62 @@
+#
+# (c) Jan Gehring <jan.gehring@gmail.com>
+# 
+# vim: set ts=3 sw=3 tw=0:
+# vim: set expandtab:
+
+package Rex::Service::Debian;
+
+use strict;
+use warnings;
+
+use Rex::Commands::Run;
+use Rex::Logger;
+
+sub new {
+   my $that = shift;
+   my $proto = ref($that) || $that;
+   my $self = { @_ };
+
+   bless($self, $proto);
+
+   return $self;
+}
+
+sub start {
+   my($self, $service) = @_;
+
+   run "/etc/init.d/$service start";
+
+   if($? == 0) {
+      return 1;
+   }
+
+   return 0;
+}
+
+sub stop {
+   my($self, $service) = @_;
+
+   run "/etc/init.d/$service stop";
+
+   if($? == 0) {
+      return 1;
+   }
+
+   return 0;
+}
+
+sub status {
+   my($self, $service) = @_;
+
+   run "/etc/init.d/$service status";
+
+   if($? == 0) {
+      return 1;
+   }
+
+   return 0;
+}
+
+
+1;
