@@ -1,4 +1,5 @@
 rex (0.4.0) unstable; urgency=low
+  * added functions to manage services (start/stop/status)
   * install package support for yum, apt and zypper
   * remove package support for yum, apt and zypper
   * added support to install a specific version of a package
